feat: Add methods' unit tests
Add tests for application classes that verify methods functionalities.
Refactor code, so that it can be validated with tests.